<resources>
    <string name="app_name">QuDue</string>
    <string name="action_settings">Settings</string>
    <string name="button_register">Register</string>
    <string name="email">Email:</string>
    <string name="lastname">Last Name:</string>
    <string name="firstname">First Name:</string>
    <string name="Title">Login</string>
    <string name="UserName">Student Email:</string>
    <string name="LogInAttempts">Log In Attempts:\t</string>

    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Password">Password:</string>
    <string name="Welcome">Welcome</string>
    <string name="subtitle">Lets get started...</string>
    <string name="info1">Are you a student at Queen\'s University Belfast? You are? Perfect. Next...</string>
    <string name="title1">STEP 1:</string>
    <string name="title2">STEP 2:</string>
    <string name="info2">Do you have a QuDue account? If not you can register right here: </string>
    <string name="title3">STEP 3:</string>
    <string name="info3">You\'re ready to go!</string>
    <string name="app_name_hide">hide</string>
    <string name="Heading1">Essay List View</string>
    <string name="Heading2">Calendar View</string>
    <string name="essay">Essay</string>
    <string name="deadline">Deadline:</string>
    <string name="add_new">add new</string>
    <string name="add_title">Add New Essay</string>
    <string name="select_module">Select Module:</string>
    <string name="titleLabel">Essay Title:</string>
    <string name="wordLimitLabel">Word Limit:</string>
    <string name="startDateLabel">Start Date:</string>
    <string name="endDateLabel">Due Date:</string>
    <string name="addEssay">Add Essay</string>
    <string name="overview_title">Essay Overview</string>
    <string name="deadlineLabel">Deadline:</string>
    <string name="moduleLabel">Module:</string>
    <string name="tutorLabel">Tutor:</string>
    <string name="essay_overview_tab_title">Overview</string>
    <string name="notes_tab_title">Notes</string>
    <string name="essay_preview_tab_title">Essay</string>
    <string name="bibliography_tab_title">Biblio</string>
    <string name="references_tab_title">Refs</string>
    <string name="notes_title">Notes</string>
    <string name="preview_title">Essay Preview</string>
    <string name="biblio_title">Bibliography</string>
    <string name="ref_title">References</string>
    <string name="note">Note</string>
    <string name="note_preview_title">Note View</string>
    <string name="Save">Save</string>
    <string name="new_note_title">New Note</string>
    <string name="newNoteTitleLabel">Title:</string>
    <string name="newNoteLabel">Note:</string>
    <string name="or">OR</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="new_note_text">New Text Note</string>
    <string name="new_note_photo">New Photo Note</string>
    <string name="new_audio_photo">New Audio Note</string>
    <string name="source_title">Sources</string>
    <string name="action_logout">Log Out</string>
    <string name="select_course">Select Course</string>
    <string name="firstNameLabel">First Name:</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="emailLabel">Email:</string>
    <string name="emailConfirmLabel">Confirm Email:</string>
    <string name="passwordLabel">Password:</string>
    <string name="passwordConfirmLabel">Confirm Password:</string>

</resources>
