<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

<TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/TitleUnderline"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/Welcome"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleUnderline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/subtitle"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/InfoTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/title1"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/InfoLabel1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoTitle1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/info1"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/InfoTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoLabel1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/title2"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/InfoLabel2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoTitle2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/info2"
        android:textSize="17sp" />

    <Button
        android:id="@+id/RegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/InfoTitle3"
        android:layout_alignEnd="@+id/InfoLabel2"
        android:layout_marginBottom="-14dp"
        android:onClick="onButtonClick"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:text="@string/Register"
        android:paddingLeft="-15dp"
        android:textStyle="bold"
        android:textSize="16dp"
        />

    <TextView
        android:id="@+id/InfoTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoLabel2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/title3"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/InfoLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoTitle3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/info3"
        android:textSize="16sp" />

        <Button
            android:id="@+id/LoginLink"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/InfoLabel3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:onClick="onButtonClick"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:text="@string/Login"
            />

</RelativeLayout>
