<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_two"
    tools:context=".Login">

    <TextView
        android:id="@+id/Login_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/TitleUnderline"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/Login_Title"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/UserNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleUnderline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/UserName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/UserNameInput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNameLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:cursorVisible="true"
        android:singleLine="true"
        android:lines="1"
        android:nextFocusDown="@+id/PasswordInput" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:cursorVisible="true"
        android:singleLine="true"
        android:lines="1"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/Login"
        />

    <Button
        android:id="@+id/Login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/PasswordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onButtonClick"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:text="@string/Login" />

    />



</RelativeLayout>