<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_essay"
    tools:context=".AddNewEssay">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/addNewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/titleUnderline"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/addNewTitle"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/selectModuleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleUnderline"
        android:layout_marginTop="30dp"
        android:text="@string/select_module"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/moduleCombo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/selectModuleLabel"
        android:layout_marginStart="20dp"
        android:spinnerMode="dialog"
        />

    <TextView
        android:id="@+id/essayTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleCombo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/titleLabel"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/essayTitleField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/essayTitleLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:cursorVisible="true"
        android:singleLine="false"
        android:nextFocusDown="@+id/wordLimit"
        android:background="@drawable/custom_edit_text"
        android:paddingLeft="4dp"
        android:maxLines="4"
        android:maxLength="480"
        />

        <TextView
            android:id="@+id/wordLimitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/essayTitleField"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/wordLimitLabel"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/wordLimit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/essayTitleField"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_alignBaseline="@id/wordLimitLabel"
            android:cursorVisible="true"
            android:singleLine="true"
            android:lines="1"
            android:maxLength="7"
            android:background="@drawable/custom_edit_text"
            android:inputType="number"
            android:paddingLeft="4dp"
            android:nextFocusDown="@+id/startDateButton"
            />

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wordLimitLabel"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/startDateLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/wordLimitLabel"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:layout_alignBaseline="@id/startDateLabel"
            android:background="@android:color/transparent"
            android:hint="SELECT DATE"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:focusable="false"
            android:cursorVisible="false"

            />


        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startDateLabel"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/endDateLabel"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/dueDate"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:layout_alignBaseline="@id/endDateLabel"
            android:background="@android:color/transparent"
            android:hint="SELECT DATE"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:focusable="false"
            android:cursorVisible="false"
            />


        <Button
        android:id="@+id/addEssayButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/endDateLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:onClick="onButtonClick"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:text="@string/addEssay" />

    />

    </RelativeLayout>

</ScrollView>