<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EssayOverviewFragment">

        <TextView
            android:id="@+id/essayOverviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/overview_title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/titleUnderline"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/essayOverviewTitle"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/essayTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleUnderline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/titleLabel"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/essayTitleField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/essayTitleLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:singleLine="false"
            android:minLines="3"
            android:background="@android:color/transparent"
            android:paddingLeft="4dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/wordLimitLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/essayTitleField"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/wordLimitLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wordLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/essayTitleField"
            android:layout_toEndOf="@id/wordLimitLabel"
            android:layout_alignBaseline="@id/wordLimitLabel"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/daysToDeadline"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wordLimitLabel"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/deadlineLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/deadlineDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/wordLimitLabel"
            android:layout_toEndOf="@id/daysToDeadline"
            android:layout_alignBaseline="@id/daysToDeadline"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:focusable="false"
            android:textSize="20sp"

            />


        <TextView
            android:id="@+id/moduleLabel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/daysToDeadline"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/moduleLabel"
            android:textSize="20sp" />



        <TextView
            android:id="@+id/module"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/deadlineDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/moduleLabel"
            android:layout_alignBaseline="@id/moduleLabel"
            android:background="@android:color/transparent"
            android:inputType="none"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:focusable="false"
            android:textSize="20sp"
            />


    </RelativeLayout>
